2022-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_packageversion.R: Comparison to 'dev' revision
	version now tolerant of optional trailing zero (e.g. 1.0.8.0)

2022-01-11  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.0.8

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem
	* vignettes/pdf/*: Rebuilt

	* inst/include/Rcpp/r/headers.h: STRICT_R_HEADERS set by default
	unless override RCPP_NO_STRICT_HEADERS is set (cf issue #1158)

2022-01-10  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/rmd/Rcpp.bib: Updated CRAN and R references
        * inst/bib/Rcpp.bib: Idem
        * vignettes/rmd/getCurrentVersionsOfCitedPackages.R: Updated

2022-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/NEWS.Rd: Added entries for a few PRs since last release

	* vignettes/rmd/Rcpp.bib: Provide both url and doi entries
	* inst/bib/Rcpp.bib: Idem

2021-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add section on performance

2021-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update usage counts

2021-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp.bib: Update JSS references to new doi scheme,
	update http URL links to https
	* inst/bib/Rcpp.bib: Idem

2021-12-10  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

2021-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Rcpp: Added as new entry point
	* inst/include/Rcpp/Light: Added as lighter-weight entry point
	* inst/include/Rcpp/Lighter: Idem
	* inst/include/Rcpp/Lightest: Idem

2021-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove Travis badge
	* .travis.yml: Removed

2021-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Minor cleanup
