@@ -2,7 +2,7 @@
 // attributes.cpp: Rcpp R/C++ interface class library -- Rcpp attributes
 //
 // Copyright (C) 2012 - 2020  JJ Allaire, Dirk Eddelbuettel and Romain Francois
-// Copyright (C) 2021         JJ Allaire, Dirk Eddelbuettel, Romain Francois, Iñaki Ucar and Travers Ching
+// Copyright (C) 2021 - 2022  JJ Allaire, Dirk Eddelbuettel, Romain Francois, Iñaki Ucar and Travers Ching
 //
 // This file is part of Rcpp.
 //
@@ -400,12 +400,20 @@ namespace attributes {
             Param sigParam = paramNamed(kExportSignature);
             std::string sig = sigParam.value();
             trimWhitespace(&sig);
-            if(sig.empty()) return sig;
-            if(sig.back() == '}')
+            if (sig.empty()) return sig;
+#if __cplusplus < 201103L
+            if (sig[sig.size() - 1] == '}')
+#else
+            if (sig.back() == '}')
+#endif
                 sig = sig.substr(0, sig.size()-1);
             // check sig.empty again since we deleted an element
-            if(sig.empty()) return sig;
-            if(sig.front() == '{')
+            if (sig.empty()) return sig;
+#if __cplusplus < 201103L
+            if (sig[0] == '{')
+#else
+            if (sig.front() == '{')
+#endif
                 sig.erase(0,1);
             return sig;
         }
@@ -2810,7 +2818,7 @@ namespace attributes {
         // as the error message is generally more descriptive
         CharacterVector pargs_cv = formalArgs(eval(parse(_["text"] = args)));
         std::vector<std::string> parsed_args =
-            Rcpp::as<std::vector<std::string>>(pargs_cv);
+            Rcpp::as<std::vector<std::string> >(pargs_cv);
 
         for(size_t i=0; i<required_args.size(); ++i) {
             if(std::find(parsed_args.begin(), parsed_args.end(),
